2005-02-28 hugo303

	* tests/ex_xml_output.c, tests/ex_log_output.c, tests/ex_output.c,
	  src/check_log.c:
	  Fixed memory leaks.

2005-01-04 hugo303

	* check.m4, config.h.in, configure.in, src/check_pack.c: Fixed
	quoting and added configure test for stdint.h.

2005-01-04 hugo303

        * tests/check_check_master.c: Made failure messages more helpful.

2004-11-12 hugo303

	* debian/check.dirs, debian/control, debian/rules: Fixed building
	with gcc3. Removed empty money dir from docs.

2004-11-10 hugo303

	* Makefile.am, rpm/check.spec.in, rpm/Makefile.am: Fixed so
	distributions build without trouble.

2004-11-09 hugo303

	* src/check_run.c, tests/check_check_master.c: Use strsignal
	to print describing text for signals.

2004-11-09 hugo303

	* doc/tutorial.sgml: Documented signals handling and timeouts.

2004-11-09 hugo303

	* tests/check_check_master.c src/check.h.in:
	Changed failure message for fail_if.

2004-11-09 hugo303

	* src/check.c, src/check.h.in, src/check_impl.h, src/check_run.c,
	tests/check_check_master.c, tests/check_check_sub.c:
	Added support for timeouts on tests, enabling detection of
	eternal loops as errors.

2004-11-08 hugo303

	* src/check.c, src/check.h.in, src/check_impl.h, src/check_run.c,
	tests/check_check_master.c, tests/check_check_sub.c:
	Added support for testing on expected signals. Implementation
	courtesy of Lucas Di Pentima and Cesar Ballardini. Also cleaned
	up the test verification to simplify merging of new tests.

2004-11-04 hugo303

        * src/check.c, src/check_list.c, src/check_list.h, src/check_log.c,
	src/check_msg.c, tests/check_list.c:
	Changed name on function list_create to check_list_create to avoid
	name clash.

2004-11-04 hugo303

	* src/check.c, src/check.h.in, tests/check_check_master.c,
	tests/check_check_sub.c: Applied ANSI C99 patch (#1047014)

2004-08-20 hugo303

	* doc/tutorial.sgml: Updated with new features.

2004-08-18 hugo303

	* src/check.c, src/check.h.in, src/check_impl.h, src/check_log.c,